[BUGFIX] Correct alignment of dashboard footer links

--- a/assets/css/modules/_dashboard.scss
+++ b/assets/css/modules/_dashboard.scss
@@ -46,6 +46,7 @@ $dashboard-gutter: 10px;
 .dashboard-item-footer-link {
     color: inherit;
     display: inline-block;
+    vertical-align: middle;
     line-height: 1.25;
     text-decoration: none;
     border-bottom: 1px dotted;
